--- a/Application/Admin/View/Member/member_list.html
+++ b/Application/Admin/View/Member/member_list.html
@@ -3,7 +3,7 @@
 			<div class="col-md-8">
 				<form action="{:U('Member/memberList/','rank='.$rank)}" method="get">
 
-					<h4><small>结算统计</small></h4>
+					<h4><small>用户列表</small></h4>
 					<div class="form-group">
 
 						<select name="select" class="form-control inline-block" style="width: 150px; height:30px; float: left;border-color: #d2d6de;font-size:12px;border-radius:3px;">
