--- a/Static/Seller/Css/seller_center.css
+++ b/Static/Seller/Css/seller_center.css
@@ -353,7 +353,7 @@ label.error i { margin-right: 4px;}
 .store-closed dd { font: 12px/18px "microsoft yahei"; color: #555; height: 18px;}
 /* 布局 */
 .ncsc-layout {overflow: hidden;}
-.ncsc-layout-left { width: 9%; max-width:200px;  float: left; position: fixed; z-index: 2;margin-top: 72px;height: 1000px; background: #F4F4F4;overflow: hidden;}
+.ncsc-layout-left { width: 9%; min-width:155px;  float: left; position: fixed; z-index: 2;margin-top: 72px;height: 1000px; background: #F4F4F4;overflow: hidden;}
 .ncsc-layout-right { background-color: #FFF; position: relative; z-index: 1;width: 87%;float: left;margin-top: 72px;margin-left: 190px;}
 /* 内容其余左侧边栏 */
 .ncsc-layout-left .sidebar { width: 100%;}
