liaopeng:1月23号，添加了品牌申请和审批

--- a/Application/Admin/View/Brand/brand_list.html
+++ b/Application/Admin/View/Brand/brand_list.html
@@ -46,7 +46,7 @@
 						<td class="table-textcenter">{$bl.sort}</td>
 						<td class="table-textcenter">{$bl.brand_name}</td>
 						<td class="table-textcenter">{$bl.brand_type_name}</td>
-						<td>{$bl.brand_logo}</td>
+						<td><img src="/Uploads/Mall/Brand/{$bl.brand_logo}" width="100" /></td>
 						<td class="table-textcenter"><if condition="$bl.is_show eq 1"> 显示
 								<elseif condition="$bl.is_show eq 0"/>
 								不显示 </if></td>
