--- a/Application/Seller/View/Goods/info.html
+++ b/Application/Seller/View/Goods/info.html
@@ -145,9 +145,16 @@
 						</volist>
 				</volist> 
 				</select> 
-				</dd> 
-				</dl>
+				</dd>
 
+				</dl>
+				<dl>
+					<dt>单品库存（非多规格）</dt>
+					<dd>
+						<input type="text" class="form-control" name="stock" value="<if condition='goods_info'>{$goods_info.stock}<else />1000</if>" />
+					</dd>
+
+				</dl>
 				<?php if ($goods_info && $goods_info['examine_status'] == 1) { ?>
 				<dl>
 					<dt>商品发布：</dt>
