--- a/Application/Admin/View/Finance/love_list.html
+++ b/Application/Admin/View/Finance/love_list.html
@@ -2,7 +2,10 @@
     <div class="row">
         <div class="col-md-8">
             <form action="{:U('Finance/love_list')}" method="get">
-                <h4><small>爱心捐赠明细</small></h4>
+                <h4><small>爱心捐赠明细</small>
+                    <span class="label label-info">一劵通捐献总额：{$yjt}</span>
+                    <span class="label label-primary">购物劵捐献总额：{$gwj}</span>
+                </h4>
                 <div class="form-group">
                     <select name="type" class="form-control inline-block" style="width: 100px; height:30px; float: left;border-color: #d2d6de;font-size:12px;border-radius:3px;">
                         <option value="0">捐赠类型</option>
