--- a/Application/Admin/View/Order/sellerlist.html
+++ b/Application/Admin/View/Order/sellerlist.html
@@ -8,7 +8,7 @@
 
 					<h4><small>商家订单列表</small></h4>
 					<div class="form-group">
-
+						<div class="input-group input-group-sm" style="margin-left:5px;width: 200px;display: inline-flex;">
 						<select name="type" class="form-control inline-block" style="width: 150px; height:30px; float: left;border-color: #d2d6de;font-size:12px;border-radius:3px;">
 							<option value="0">订单状态</option>
 							<option value="1" <if condition="$select eq 1">selected</if>>待付款</option>
@@ -17,12 +17,13 @@
 							<option value="4" <if condition="$select eq 4">selected</if>>待评价</option>
 							<option value="5" <if condition="$select eq 5">selected</if>>已完成</option>
 						</select>
+						</div>
 						<div class="input-group input-group-sm" style="margin-left:5px;width: 200px;display: inline-flex;">
 							<input class="form-control" type="text" name="order_sn" value="{$order_sn}" placeholder="订单号">
-							<span class="input-group-btn">
-						<button type="submit" class="btn btn-info ">搜索</button>
-						</span>
+
+
 						</div>
+						<button type="submit" class="btn btn-info ">搜索</button>
 					</div>
 				</form>
 			</div>
@@ -49,7 +50,7 @@
 						<table class="order-detail-table">
 							<thead>
 							<tr>
-								<th colspan="4" class="column-info column-t"> <div class="column-content"> 订单号：<a href="">{$ol.order_sn}</a><span class="sep">|</span>联系人：{$ol.consignee}<span class="sep">|</span>收货地址：{$ol.address}<span class="sep">|</span>联系电话：{$ol.mobile}<span class="sep">|</span>预定时间：{$ol.order_time|date="Y-m-d h:i:s",###} </div>
+								<th colspan="4" class="column-info column-t"> <div class="column-content"> 订单号：<a href="">{$ol.order_sn}</a><span class="sep">|</span>购买人：{$ol.username}<span class="sep">|</span>商家：{$ol.store_name}<span class="sep">|</span>联系人：{$ol.consignee}<span class="sep">|</span>收货地址：{$ol.address}<span class="sep">|</span>联系电话：{$ol.mobile}<span class="sep">|</span>预定时间：{$ol.order_time|date="Y-m-d h:i:s",###} </div>
 								</th>
 								<th class="column-info column-t">
 									<div class="operates">
