liaopeng:2017/02/09 资金日志中修改提现金额为负的，退货列表倒序排列，增加提交订单时验证密码接口

--- a/Application/Mobile/View/Version/share.html
+++ b/Application/Mobile/View/Version/share.html
@@ -12,7 +12,9 @@
 			<ul class="mui-table-view" >
 				<li class="mui-table-view-cell mui-media">
 					<a href="javascript:;" >
-						<img class="mui-media-object mui-pull-left" src="/Static/Common/mui/image/shuijiao.jpg" style="border-radius: 50%;">
+						<div  style="border-radius: 50%; height: 42px; width: 42px; float: left; overflow: hidden; text-align: center; border: 1px solid #cccccc;">
+						<img class="mui-media-object mui-pull-left" src="{$photo}" style="margin: 0 auto">
+						</div>
 						<div class="mui-media-body">
 							我是:{$name}
 							<p class='mui-ellipsis'>和谐湘西·共享未来</p>
