--- a/Application/Admin/View/Push/plist.html
+++ b/Application/Admin/View/Push/plist.html
@@ -20,8 +20,8 @@
 			<thead>
 				<tr>
 					<th class="table-textcenter">ID</th>
-					<th class="table-textcenter">类型</th>
 					<th class="table-textcenter">标题</th>
+					<th class="table-textcenter">状态</th>
 					<th class="table-textcenter">内容</th>
 					<th class="table-textcenter">操作</th>
 				</tr>
