--- a/Application/Mobile/View/Public/register.html
+++ b/Application/Mobile/View/Public/register.html
@@ -200,7 +200,7 @@
                                }
 							   alert("注册成功");
 
-							   window.location.href="http://www.baidu.com";
+							   window.location.href="http://a.app.qq.com/o/simple.jsp?pkgname=com.sdyr.tongdui";
 
                            }
                        });
