--- a/Application/Seller/View/Refund/judge.html
+++ b/Application/Seller/View/Refund/judge.html
@@ -83,7 +83,7 @@
             <?php } ?>
 
             <?php
-                if($model['status'] == 1 && $model['type'] == '退货') {
+                if($model['status'] > 1 && $model['type'] == '退货') {
             ?>
             <li>
                 <label>物流公司</label>
@@ -93,10 +93,7 @@
                 <label>物流单号</label>
                 <span>{$model.ship_id}</span>
             </li>
-            <li>
-                <label>物流单号</label>
-                <span>{$model.ship_id}</span>
-            </li>
+
             <?php  } ?>
 
             <?php
