--- a/Application/Seller/View/Order/olist.html
+++ b/Application/Seller/View/Order/olist.html
@@ -23,7 +23,7 @@
 				<table class="order-detail-table">
 					<thead>
 						<tr>
-							<th colspan="4" class="column-info column-t"> <div class="column-content"> 订单号：<a href="">{$ol.order_sn}</a><span class="sep">|</span>联系人：{$ol.consignee}<span class="sep">|</span>收货地址：{$ol.address}<span class="sep">|</span>联系电话：{$ol.mobile}<span class="sep">|</span>预定时间：{$ol.order_time|date="Y-m-d h:i:s",###} </div>
+							<th colspan="4" class="column-info column-t"> <div class="column-content"> 订单号：<a href="">{$ol.order_sn}</a><span class="sep">|</span>联系人：{$ol.consignee}<span class="sep">|</span>收货地址：{$ol.address}<span class="sep">|</span>联系电话：{$ol.mobile}<span class="sep">|</span>预定时间：{$ol.order_time|date="Y-m-d H:i:s",###} </div>
 							</th>
 							<th class="column-info column-t">
 								<div class="operates">
